--- a/LCC-SAMS_Project.vbproj
+++ b/LCC-SAMS_Project.vbproj
@@ -414,6 +414,9 @@
     <Content Include="Resources\updatedsuccessfully.png" />
     <None Include="Resources\success1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Upload-Area\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
