--- a/LCC-SAMS_Project.vbproj
+++ b/LCC-SAMS_Project.vbproj
@@ -76,12 +76,12 @@
   <ItemGroup>
     <Reference Include="Bunifu_UI_v1.52, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Bunifu_UI_v1.52.dll</HintPath>
+      <HintPath>B:\LCC-BS Information Technology Files\BSIT-III_2nd_Sem\System Integration and Architechture 2\LCC-SAMS_ProtoType\packages\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Program Files (x86)\MySQL\MySql.Data.dll</HintPath>
+      <HintPath>B:\LCC-BS Information Technology Files\BSIT-III_2nd_Sem\System Integration and Architechture 2\LCC-SAMS_ProtoType\LCC-SAMS_ProtoType\bin\Debug\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -116,6 +116,12 @@
       <DependentUpon>Dashboard.vb</DependentUpon>
     </Compile>
     <Compile Include="Dashboard.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dlg_addstudents.Designer.vb">
+      <DependentUpon>dlg_addstudents.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlg_addstudents.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlg_savesuccessfully.designer.vb">
@@ -224,6 +230,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlg_addstudents.resx">
+      <DependentUpon>dlg_addstudents.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlg_savesuccessfully.resx">
       <DependentUpon>dlg_savesuccessfully.vb</DependentUpon>
