update that has error

--- a/App.config
+++ b/App.config
@@ -1,5 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="LCC_SAMS_Project.My.MySettings.db_lccsamsConnectionString"
+      connectionString="server=localhost;user id=root;database=db_lccsams"
+      providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
