updates sg form

--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -18,5 +18,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">server=192.168.0.113;user id=raldz;password=d74r3j93527;persistsecurityinfo=True;database=db_lccsams</Value>
     </Setting>
+    <Setting Name="db_lccsams_jeraldServer" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;server=192.168.254.114;user id=raldz;persistsecurityinfo=True;database=db_lccsams&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;MySql.Data.MySqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">server=192.168.254.114;user id=raldz;persistsecurityinfo=True;database=db_lccsams</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
