--- a/App.config
+++ b/App.config
@@ -3,12 +3,9 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="LCC_SAMS_Project.My.MySettings.db_lccsamsConnectionString"
-      connectionString="server=localhost;user id=root;database=db_lccsams"
-      providerName="MySql.Data.MySqlClient" />
-    <add name="LCC_SAMS_Project.My.MySettings.db_lccsams_arnicConnection"
-      connectionString="server=192.168.0.113;user id=raldz;password=d74r3j93527;persistsecurityinfo=True;database=db_lccsams"
-      providerName="MySql.Data.MySqlClient" />
+    <add name="LCC_SAMS_Project.My.MySettings.db_lccsamsConnectionString" connectionString="server=localhost;user id=root;database=db_lccsams" providerName="MySql.Data.MySqlClient"/>
+    <add name="LCC_SAMS_Project.My.MySettings.db_lccsams_arnicConnection" connectionString="server=192.168.0.113;user id=raldz;password=d74r3j93527;persistsecurityinfo=True;database=db_lccsams" providerName="MySql.Data.MySqlClient"/>
+    <add name="LCC_SAMS_Project.My.MySettings.db_lccsams_jeraldServer" connectionString="server=192.168.254.114;user id=raldz;persistsecurityinfo=True;database=db_lccsams" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
