--- a/LCC-SAMS_Project.vbproj
+++ b/LCC-SAMS_Project.vbproj
@@ -96,6 +96,9 @@
     <PlatformTarget>x86</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AxShockwaveFlashObjects, Version=1.0.0.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="Bunifu_UI_v1.52, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -129,6 +132,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Import Include="CrystalDecisions.CrystalReports.Engine" />
+    <Import Include="CrystalDecisions.ReportAppServer" />
+    <Import Include="CrystalDecisions.ReportSource" />
     <Import Include="Microsoft.VisualBasic" />
     <Import Include="MySql.Data.MySqlClient" />
     <Import Include="MySql.Data.MySqlClient.Authentication" />
@@ -150,22 +156,25 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrystalReport3.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CrystalReport3.rpt</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="ApplicationEvents.vb" />
     <Compile Include="Dashboard.Designer.vb">
       <DependentUpon>Dashboard.vb</DependentUpon>
     </Compile>
     <Compile Include="Dashboard.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="db_lccsamsDataSet.Designer.vb">
+    <Compile Include="db_lccsamsDataSet1.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>db_lccsamsDataSet.xsd</DependentUpon>
+      <DependentUpon>db_lccsamsDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="db_lccsamsDataSet1.vb">
+      <DependentUpon>db_lccsamsDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="db_lccsams_elemDs.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_lccsams_elemDs.xsd</DependentUpon>
     </Compile>
     <Compile Include="dlg_addnewsy.designer.vb">
       <DependentUpon>dlg_addnewsy.vb</DependentUpon>
@@ -373,10 +382,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="CrystalReport3.rpt">
-      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>CrystalReport3.vb</LastGenOutput>
-    </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.vb</DependentUpon>
     </EmbeddedResource>
@@ -481,16 +486,27 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="db_lccsamsDataSet.xsc">
-      <DependentUpon>db_lccsamsDataSet.xsd</DependentUpon>
+    <None Include="db_lccsamsDataSet1.xsc">
+      <DependentUpon>db_lccsamsDataSet1.xsd</DependentUpon>
     </None>
-    <None Include="db_lccsamsDataSet.xsd">
+    <None Include="db_lccsamsDataSet1.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>db_lccsamsDataSet.Designer.vb</LastGenOutput>
+      <LastGenOutput>db_lccsamsDataSet1.Designer.vb</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="db_lccsamsDataSet.xss">
-      <DependentUpon>db_lccsamsDataSet.xsd</DependentUpon>
+    <None Include="db_lccsamsDataSet1.xss">
+      <DependentUpon>db_lccsamsDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="db_lccsams_elemDs.xsc">
+      <DependentUpon>db_lccsams_elemDs.xsd</DependentUpon>
+    </None>
+    <None Include="db_lccsams_elemDs.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>db_lccsams_elemDs.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="db_lccsams_elemDs.xss">
+      <DependentUpon>db_lccsams_elemDs.xsd</DependentUpon>
     </None>
     <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
