--- a/LCC-SAMS_Project.vbproj
+++ b/LCC-SAMS_Project.vbproj
@@ -132,9 +132,6 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Import Include="CrystalDecisions.CrystalReports.Engine" />
-    <Import Include="CrystalDecisions.ReportAppServer" />
-    <Import Include="CrystalDecisions.ReportSource" />
     <Import Include="Microsoft.VisualBasic" />
     <Import Include="MySql.Data.MySqlClient" />
     <Import Include="MySql.Data.MySqlClient.Authentication" />
@@ -157,24 +154,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="college_reports.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>college_reports.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Dashboard.Designer.vb">
       <DependentUpon>Dashboard.vb</DependentUpon>
     </Compile>
     <Compile Include="Dashboard.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="db_lccsamsDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_lccsamsDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="db_lccsamsDataSet1.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>db_lccsamsDataSet1.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="db_lccsamsDataSet1.vb">
-      <DependentUpon>db_lccsamsDataSet1.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="db_lccsams_elemDs.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>db_lccsams_elemDs.xsd</DependentUpon>
     </Compile>
     <Compile Include="dlg_addnewsy.designer.vb">
       <DependentUpon>dlg_addnewsy.vb</DependentUpon>
@@ -374,6 +374,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Settings.vb" />
     <Compile Include="UpdatedSuccessfully.designer.vb">
       <DependentUpon>UpdatedSuccessfully.vb</DependentUpon>
     </Compile>
@@ -382,6 +383,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="college_reports.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>college_reports.vb</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.vb</DependentUpon>
     </EmbeddedResource>
@@ -486,6 +491,17 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="db_lccsamsDataSet.xsc">
+      <DependentUpon>db_lccsamsDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="db_lccsamsDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>db_lccsamsDataSet.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="db_lccsamsDataSet.xss">
+      <DependentUpon>db_lccsamsDataSet.xsd</DependentUpon>
+    </None>
     <None Include="db_lccsamsDataSet1.xsc">
       <DependentUpon>db_lccsamsDataSet1.xsd</DependentUpon>
     </None>
@@ -496,17 +512,6 @@
     </None>
     <None Include="db_lccsamsDataSet1.xss">
       <DependentUpon>db_lccsamsDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="db_lccsams_elemDs.xsc">
-      <DependentUpon>db_lccsams_elemDs.xsd</DependentUpon>
-    </None>
-    <None Include="db_lccsams_elemDs.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>db_lccsams_elemDs.Designer.vb</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="db_lccsams_elemDs.xss">
-      <DependentUpon>db_lccsams_elemDs.xsd</DependentUpon>
     </None>
     <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
