updates database connector

--- a/App.config
+++ b/App.config
@@ -3,8 +3,10 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="LCC_SAMS_Project.My.MySettings.db_lccsams_localhost"
+    <add name="LCC_SAMS_Project.My.MySettings.db_lccsamsConnectionLocalhost"
       connectionString="server=localhost;user id=raldz;persistsecurityinfo=True;database=db_lccsams"
+      providerName="MySql.Data.MySqlClient" />
+    <add name="LCC_SAMS_Project.My.MySettings.db_connection" connectionString="server=127.0.0.1;user id=raldz;password=d74r3j93527;persistsecurityinfo=True;database=db_lccsams"
       providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <startup>
