--- a/App.config
+++ b/App.config
@@ -9,7 +9,7 @@
     <add name="LCC_SAMS_Project.My.MySettings.db_connection" connectionString="server=127.0.0.1;user id=raldz;password=d74r3j93527;persistsecurityinfo=True;database=db_lccsams"
       providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
-  <startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
   </startup>
 </configuration>
